--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,43 @@
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cautionText"
+            android:textSize="15dp"
+            android:text="\nCaution :- This app needs a connection to the internet via the wifi or the cellular data. \nIf you turn off both, then this app will not recognize your words."
+            />
+        
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/cautionText"
+            android:id="@+id/divider1"
+            android:background="#ff000000"/>
 
         <TextView android:text="Recognized words will be displayed here" android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/text1"
+            android:layout_below="@+id/divider1"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="50dp"
             android:textSize="22dp"/>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/text1"
+            android:id="@+id/divider2"
+            android:background="#ff000000"/>
+
         <ImageButton
             android:layout_width="250dp"
             android:layout_height="250dp"
-            android:layout_below="@+id/text1"
+            android:layout_below="@+id/divider2"
             android:id="@+id/button1"
             android:layout_centerHorizontal="true"
             android:layout_margin="10dp"
@@ -33,14 +54,15 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_below="@id/button1"
-            android:id="@+id/divider1"/>
-
+            android:id="@+id/divider3"
+            android:background="#ff000000"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_below="@+id/divider1">
+            android:layout_below="@+id/divider3"
+            android:id="@+id/cautionlayout">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -48,14 +70,9 @@
                 android:layout_marginLeft="70dp"
                 android:textSize="22dp"
                 />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/cautionText"
-                android:textSize="22dp"
-                android:text="\nCaution :- \nThis app needs a connection to the internet via the wifi or the cellular data. \nIf you turn off both, then this app will not recognize your words."
-                />
+
         </LinearLayout>
+
 
     </RelativeLayout>
 </ScrollView>
