--- a/app/src/main/res/layout/speech_recognizer_widget.xml
+++ b/app/src/main/res/layout/speech_recognizer_widget.xml
@@ -1,13 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:id="@+id/widgetParentLayout"
-    android:padding="@dimen/widget_margin" android:background="#09C">
+
+    android:paddingTop="18dp">
 
     <ImageView
         android:id="@+id/appwidget_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/microphoneicon2"
+        android:src="@drawable/microphoneicon"
         android:scaleType="fitXY"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
