--- a/app/src/main/res/xml/speech_recognizer_widget_info.xml
+++ b/app/src/main/res/xml/speech_recognizer_widget_info.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="60dp" android:minHeight="45dp" android:updatePeriodMillis="86400000"
-    android:previewImage="@drawable/microphoneicon2"
+    android:minWidth="60dp" android:minHeight="60dp" android:updatePeriodMillis="86400000"
+    android:previewImage="@drawable/microphoneicon"
     android:initialLayout="@layout/speech_recognizer_widget"
     android:resizeMode="horizontal|vertical" android:widgetCategory="home_screen|keyguard"
     android:initialKeyguardLayout="@layout/speech_recognizer_widget"></appwidget-provider>
