--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
         android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+        <!--android:background="#FCE4EC">-->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
